--- a/index.html
+++ b/index.html
@@ -1,79 +1,232 @@
 <!DOCTYPE html>
-<html>
+<html lang='en-US'>
+	<head>
+		<meta charset='utf-8' />
+		<title>Starry example</title>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Starry : " />
+		<link rel='stylesheet' type='text/css' href='http://onehackoranother.com/projects/jquery/tipsy/stylesheets/tipsy.css' />
+		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' />
+		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' />
+		<link rel='stylesheet' type='text/css' href='starry.css' />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+		<script type='text/javascript' language='javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
+		<script type='text/javascript' language='javascript' src='http://onehackoranother.com/projects/jquery/tipsy/javascripts/jquery.tipsy.js'></script>
+		<script type='text/javascript' language='javascript' src='starry.js'></script>
+		<script type='text/javascript' language='javascript'>
+			$(document).ready(function () {
+				var rating;
+				rating = new Starry('#rating');
+				rating.init({
+					stars: 5,
+					userId: 0,
+					file: 'rate.php',
+					multiple: false,
+					startValue: 5,
+					readOnly: false,
+					tooltips: [
+						'Poor',
+						'Fair',
+						'Average',
+						'Good',
+						'Excellent'
+					]
+				});
 
-    <title>Starry</title>
-  </head>
+				var starry_first;
+				starry_first = new Starry('#starry_first');
+				starry_first.init({
+					stars: 5,
+					userId: 0,
+					file: 'rate.php',
+					multiple: false,
+					startValue: 2.5,
+					readOnly: false,
+					tooltips: [
+						'Poor',
+						'Fair',
+						'Average',
+						'Good',
+						'Excellent'
+					]
+				});
 
-  <body>
+				var starry_second;
+				starry_second = new Starry('#starry_second');
+				starry_second.init({
+					stars: 6,
+					startValue: 3.6,
+					readOnly: true
+				});
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Teddy95/Starry">View on GitHub</a>
+				var starry_third;
+				starry_third = new Starry('#starry_third');
+				starry_third.init({
+					stars: 3,
+					userId: 0,
+					file: 'rate.php',
+					multiple: true,
+					startValue: 0,
+					readOnly: false,
+					tooltips: [
+						'Bad',
+						'OK',
+						'Good'
+					]
+				});
 
-          <h1 id="project_title">Starry</h1>
-          <h2 id="project_tagline"></h2>
+				var starry_4;
+				starry_4 = new Starry('#starry_4');
+				starry_4.init({
+					stars: 10,
+					userId: 0,
+					file: 'rate.php',
+					multiple: true,
+					startValue: 6.35,
+					readOnly: false
+				});
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Teddy95/Starry/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Teddy95/Starry/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+				$('.Starry-tooltip').tipsy({
+					gravity: 's'
+				});
+			});
+		</script>
+	</head>
+	<body>
+		<div style='width: 100%; background: url(background_image.jpg) no-repeat scroll center -1400px transparent; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #cccccc;'>
+			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
+				<h1 style='font-size: 100px'><i class='fa fa-star'></i> Starry</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+				<br />
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+				<div id='rating' name='rating'></div>
+			</div>
+		</div>
+		<div style='width: 100%; padding: 40px;'>
+			<div style='width: 800px; margin: 0 auto !important;'>
+				<h3 style='text-align: center;'>Examples</h3>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+				<hr />
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+				<table class='table table-bordered table-striped'>
+					<tbody>
+						<tr>
+							<th>Example</th>
+							<th>Description</th>
+						</tr>
+						<tr>
+							<td><div id='starry_first' name='starry_first'></div></td>
+							<td>Five stars with tooltips. You may submit only one rating.<br />For tooltips you can use tipsy.</td>
+						</tr>
+						<tr>
+							<td><div id='starry_second' name='starry_second'></div></td>
+							<td>Six stars, you can't vote.</td>
+						</tr>
+						<tr>
+							<td><div id='starry_third' name='starry_third'></div></td>
+							<td>Three stars with tooltips. You can vote repeatedly.</td>
+						</tr>
+						<tr>
+							<td><div id='starry_4' name='starry_4'></div></td>
+							<td>Ten stars, you can vote repeatedly.</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
+			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
+				<a href='https://github.com/Teddy95/Starry/archive/v1.0.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v1.0.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+			</div>
+		</div>
+		<div style='width: 100%; padding: 40px;'>
+			<div style='width: 800px; margin: 0 auto !important;'>
+				<h3 style='text-align: center;'>Getting Started</h3>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+				<hr />
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+				<p><b>Set up your HTML markup</b></p>
+				<p><pre>&lt;div id="starry" name="starry"&gt;&lt;/div&gt;</pre></p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+				<hr />
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+				<p><b>Add starry.css and starry.js in your &lt;head&gt;</b> - Don't forget jQuery!</p>
+				<p><pre>&lt;link rel="stylesheet" type="text/css" href="starry/starry.css" /&gt;<br />&lt;script type="text/javascript" language="javascript" src="starry/starry.js"&gt;&lt;/script&gt;</pre></p>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+				<hr />
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+				<p><b>Initialize your star rating in your script file or an inline script tag</b></p>
+				<p><pre>$(document).ready(function () {<br />&thinsp;&thinsp;&thinsp;&thinsp;var starry = new Starry('#starry');<br />&thinsp;&thinsp;&thinsp;&thinsp;starry.init({<br />&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;file: '../rate.php' // Path / URL to the rate file!<br />&thinsp;&thinsp;&thinsp;&thinsp;});<br />});</pre></p>
+			</div>
+		</div>
+		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
+			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
+				<a href='https://github.com/Teddy95/Starry/archive/v1.0.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v1.0.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+			</div>
+		</div>
+		<div style='width: 100%; padding: 40px;'>
+			<div style='width: 800px; margin: 0 auto !important;'>
+				<h3 style='text-align: center;'>Options</h3>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+				<hr />
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Starry maintained by <a href="https://github.com/Teddy95">Teddy95</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+				<table class='table table-bordered table-striped'>
+					<tbody>
+						<tr>
+							<th>Option</th>
+							<th>Type</th>
+							<th>Default</th>
+							<th>Description</th>
+						</tr>
+						<tr>
+							<td>stars</td>
+							<td>int</td>
+							<td>5</td>
+							<td>Number of rating stars.</td>
+						</tr>
+						<tr>
+							<td>userId</td>
+							<td>int</td>
+							<td>0</td>
+							<td>Id of the user who has voted.</td>
+						</tr>
+						<tr>
+							<td>file</td>
+							<td>string</td>
+							<td>false</td>
+							<td>File to which the rating will be sent.</td>
+						</tr>
+						<tr>
+							<td>multiple</td>
+							<td>boolean</td>
+							<td>false</td>
+							<td>Determines whether the user can submit several ratings.</td>
+						</tr>
+						<tr>
+							<td>startValue</td>
+							<td>int</td>
+							<td>0</td>
+							<td>Preloaded rating.</td>
+						</tr>
+						<tr>
+							<td>readOnly</td>
+							<td>boolean</td>
+							<td>false</td>
+							<td>Determines whether the user can submit ratings.</td>
+						</tr>
+						<tr>
+							<td>tooltips</td>
+							<td>array</td>
+							<td>false</td>
+							<td>Tooltips for the stars.</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
+			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
+				<h3><a href='https://github.com/Teddy95' style='color: #ffffff !important;'>Made with <i class='fa fa-heart'></i> by Teddy95!</a></h3>
+			</div>
+		</div>
+	</body>
 </html>
