--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 							<td>stars</td>
 							<td>int</td>
 							<td>5</td>
-							<td>Number of rating stars.</td>
+							<td>Number of rating stars. You can choose 3, 5, 6, 8 or 10.</td>
 						</tr>
 						<tr>
 							<td>userId</td>
