--- a/index.html
+++ b/index.html
@@ -227,6 +227,18 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
+				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+					<input type="hidden" name="cmd" value="_donations">
+					<input type="hidden" name="business" value="mail@andre-sieverding.de">
+					<input type="hidden" name="lc" value="DE">
+					<input type="hidden" name="item_name" value="Panther CMS">
+					<input type="hidden" name="no_note" value="0">
+					<input type="hidden" name="currency_code" value="EUR">
+					<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
+					<input id="paypalDonateButton" style="display: none;" type="image" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Jetzt einfach, schnell und sicher online bezahlen – mit PayPal.">
+					<img alt="" style="display: none;" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
+				</form>
+				<button onclick="document.getElementById('paypalDonateButton').click();" class="btn btn-warning"><i class="octicon octicon-coffee"></i> Buy me a coffee</button>
 				<h3><a href='https://github.com/Teddy95' style='color: #ffffff !important;'>Made with <i class='fa fa-heart'></i> by Teddy95!</a></h3>
 			</div>
 		</div>
