--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 					<input id="paypalDonateButton" style="display: none;" type="image" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Jetzt einfach, schnell und sicher online bezahlen – mit PayPal.">
 					<img alt="" style="display: none;" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
 				</form>
-				<button onclick="document.getElementById('paypalDonateButton').click();" class="btn btn-warning"><i class="octicon octicon-coffee"></i> Buy me a coffee</button>
+				<button onclick="document.getElementById('paypalDonateButton').click();" class="btn btn-warning"><i class="fa fa-coffee"></i> Buy me a coffee</button>
 				<h3><a href='https://github.com/Teddy95' style='color: #ffffff !important;'>Made with <i class='fa fa-heart'></i> by Teddy95!</a></h3>
 			</div>
 		</div>
