--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				<hr />
 
 				<p><b>Initialize your star rating in your script file or an inline script tag</b></p>
-				<p><pre>$(document).ready(function () {<br />&thinsp;&thinsp;&thinsp;&thinsp;var starry = new Starry('#starry');<br />&thinsp;&thinsp;&thinsp;&thinsp;starry.init({<br />&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;file: '../rate.php' // Path / URL to the rate file!<br />&thinsp;&thinsp;&thinsp;&thinsp;});<br />});</pre></p>
+				<p><pre>$(document).ready(function () {<br />&thinsp;&thinsp;&thinsp;&thinsp;var starry = new Starry('#starry');<br />&thinsp;&thinsp;&thinsp;&thinsp;starry.init({<br />&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;file: '../rate.php' // Path / URL to the rate file! [Parameters are transferred via POST! - rate, user]<br />&thinsp;&thinsp;&thinsp;&thinsp;});<br />});</pre></p>
 			</div>
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
