--- a/index.html
+++ b/index.html
@@ -227,6 +227,20 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
+				<a href='https://github.com/Teddy95/Starry/archive/v1.0.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v1.0.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+			</div>
+		</div>
+		<div style='width: 100%; padding: 40px;'>
+			<div style='width: 800px; margin: 0 auto !important;'>
+				<h3 style='text-align: center;'>Example of evaluation with PHP</h3>
+
+				<hr />
+
+				<p><pre>&lt;?php<br /># rate.php<br /><br />/**<br />&nbsp;* In this example, we save the rating results in our database<br />&nbsp;*/<br /><br />// Read the rating result and the user id<br />$rate = intval($_POST['rate']);<br />$userId = intval($_POST['user']);<br /><br />// Create database connection<br />$db = new mysqli('localhost', 'root', 'password', 'database');<br /><br />// Our query<br />$query = "INSERT INTO `ratings` (`userId`, `rating`) VALUES (?, ?)";<br />$query = $db-&gt;prepare($query);<br />$query-&gt;bind_param('ii', $userId, $rate);<br />$query-&gt;execute();<br /><br />// Close the statement and the database connection<br />$query-&gt;close();<br />$db-&gt;close();<br />?&gt;</pre></p>
+			</div>
+		</div>
+		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
+			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_donations">
 					<input type="hidden" name="business" value="mail@andre-sieverding.de">
