--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 					startValue: 5,
 					readOnly: false,
 					tooltips: [
+						'Awful',
 						'Poor',
-						'Fair',
 						'Average',
 						'Good',
 						'Excellent'
@@ -44,8 +44,8 @@
 					startValue: 2.5,
 					readOnly: false,
 					tooltips: [
+						'Awful',
 						'Poor',
-						'Fair',
 						'Average',
 						'Good',
 						'Excellent'
