--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
 				<br />
 
-				<div id='rating' name='rating'></div>
+				<div id='rating' name='rating'></div><iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch"
+  allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
