--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@
 
 				<br />
 
-				<div id='rating' name='rating'></div><iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch"
+				<div id='rating' name='rating'></div>
+				
+				<br />
+				
+				<iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch"
+  allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=fork"
   allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
 			</div>
 		</div>
