--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 				<br />
 				<br />
 				
-				<iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch&count=true&size=large"
-  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=fork&count=true&size=large"
+				<iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=fork&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
 			</div>
 		</div>
