--- a/index.html
+++ b/index.html
@@ -101,17 +101,16 @@
 				<br />
 
 				<div id='rating' name='rating'></div>
-				
-				<br />
-				<br />
-				
-				<iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch&count=true&size=large"
-  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=fork&count=true&size=large"
-  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
+				<div style='text-align: center;'>
+					<iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch&count=true&size=large"
+  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=fork&count=true&size=large"
+  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+  </div>
+			
 				<h3 style='text-align: center;'>Examples</h3>
 
 				<hr />
