--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 		<link rel='stylesheet' type='text/css' href='http://onehackoranother.com/projects/jquery/tipsy/stylesheets/tipsy.css' />
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' />
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' />
+		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Patrick+Hand' />
 		<link rel='stylesheet' type='text/css' href='starry.css' />
 
-		<link rel='shortcut icon' type='image/x-icon' href='icons/star_color.png' />
+		<link rel='shortcut icon' type='image/x-icon' href='icons/star_hover.png' />
 
 		<script type='text/javascript' language='javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 		<script type='text/javascript' language='javascript' src='http://onehackoranother.com/projects/jquery/tipsy/javascripts/jquery.tipsy.js'></script>
@@ -111,7 +112,7 @@
   allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
   </div>
 			
-				<h3 style='text-align: center;'>Examples</h3>
+				<h3 style="text-align: center; font-family: 'Patrick Hand', cursive;">Examples</h3>
 
 				<hr />
 
@@ -148,7 +149,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h3 style='text-align: center;'>Getting Started</h3>
+				<h3 style="text-align: center; font-family: 'Patrick Hand', cursive;">Getting Started</h3>
 
 				<hr />
 
@@ -173,7 +174,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h3 style='text-align: center;'>Options</h3>
+				<h3 style="text-align: center; font-family: 'Patrick Hand', cursive;">Options</h3>
 
 				<hr />
 
@@ -238,7 +239,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h3 style='text-align: center;'>Example of evaluation with PHP</h3>
+				<h3 style="text-align: center; font-family: 'Patrick Hand', cursive;">Example of evaluation with PHP</h3>
 
 				<hr />
 
