--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
   </div>
 			
-				<h3 style="text-align: center; font-family: 'Patrick Hand', cursive;">Examples</h3>
+				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-lightbulb-o'></i> Examples</h1>
 
 				<hr />
 
@@ -149,7 +149,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h3 style="text-align: center; font-family: 'Patrick Hand', cursive;">Getting Started</h3>
+				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-paper-plane-o'></i> Getting Started</h1>
 
 				<hr />
 
@@ -174,7 +174,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h3 style="text-align: center; font-family: 'Patrick Hand', cursive;">Options</h3>
+				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-cogs'></i> Options</h1>
 
 				<hr />
 
@@ -239,7 +239,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h3 style="text-align: center; font-family: 'Patrick Hand', cursive;">Example of evaluation with PHP</h3>
+				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-code'></i> Example of evaluation with PHP</h1>
 
 				<hr />
 
