--- a/index.html
+++ b/index.html
@@ -104,14 +104,15 @@
 				<div id='rating' name='rating'></div>
 			</div>
 		</div>
-		<div style='width: 100%; padding: 40px;'>
-			<div style='width: 800px; margin: 0 auto !important;'>
-				<div style='text-align: center;'>
-					<iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch&count=true&size=large"
+		<div style='width: 100%; padding: 40px; background-color: #ffc600;'>
+			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
+				<iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch&count=true&size=large"
   allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=fork&count=true&size=large"
   allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
-  </div>
-			
+			</div>
+		</div>
+		<div style='width: 100%; padding: 40px;'>
+			<div style='width: 800px; margin: 0 auto !important;'>
 				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-lightbulb-o'></i> Examples</h1>
 
 				<hr />
