--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div id='rating' name='rating'></div>
 			</div>
 		</div>
-		<div style='width: 100%; padding: 40px; background-color: #ffc600;'>
+		<div style='width: 100%; padding: 40px; background-color: #f2f1ed;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
 				<iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=watch&count=true&size=large"
   allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=Teddy95&repo=Starry&type=fork&count=true&size=large"
