--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-lightbulb-o'></i> Examples</h1>
+				<h1 id='Examples' style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-lightbulb-o'></i> Examples</h1>
 
 				<hr />
 
@@ -167,7 +167,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-paper-plane-o'></i> Getting Started</h1>
+				<h1 id='Getting-Started' style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-paper-plane-o'></i> Getting Started</h1>
 
 				<hr />
 
@@ -192,7 +192,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-cogs'></i> Options</h1>
+				<h1 id='Options' style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-cogs'></i> Options</h1>
 
 				<hr />
 
@@ -251,7 +251,7 @@
 		</div>
 		<div style='width: 100%; padding: 40px;'>
 			<div style='width: 800px; margin: 0 auto !important;'>
-				<h1 style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-code'></i> Example of evaluation with PHP</h1>
+				<h1 id='Example-of-evaluation-with-PHP' style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-code'></i> Example of evaluation with PHP</h1>
 
 				<hr />
 
