--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset='utf-8' />
 		<title>Starry</title>
+		
+		<meta name='author' content='Andre Sieverding' />
+		<meta name='keywords' content='javascript, star, rating, star rating, starrating, js, github, andre sieverding, teddy, teddy95' />
+		<meta name='description' content='JavaScript star rating system.' />
 
 		<link rel='stylesheet' type='text/css' href='http://onehackoranother.com/projects/jquery/tipsy/stylesheets/tipsy.css' />
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' />
