--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						</tr>
 						<tr>
 							<td><div id='starry_first' name='starry_first'></div></td>
-							<td>Five stars with tooltips. You may submit only one rating.<br />For tooltips you can use tipsy.</td>
+							<td>Five stars with tooltips. You may submit only one rating.<br />For tooltips you must include <a href='https://github.com/jaz303/tipsy'>tipsy</a>.</td>
 						</tr>
 						<tr>
 							<td><div id='starry_second' name='starry_second'></div></td>
@@ -232,7 +232,7 @@
 							<td>tooltips</td>
 							<td>array</td>
 							<td>false</td>
-							<td>Tooltips for the stars.</td>
+							<td>Tooltips for the stars. (You must include <a href='https://github.com/jaz303/tipsy'>tipsy</a>!)</td>
 						</tr>
 						<tr>
 							<td>success</td>
