--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<link rel='shortcut icon' type='image/x-icon' href='icons/star_hover.png' />
 
-		<script type='text/javascript' language='javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
+		<!--<script type='text/javascript' language='javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>-->
 		<script type='text/javascript' language='javascript' src='http://onehackoranother.com/projects/jquery/tipsy/javascripts/jquery.tipsy.js'></script>
 		<script type='text/javascript' language='javascript' src='JSON.js'></script>
 		<script type='text/javascript' language='javascript' src='starry.js'></script>
