--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				rating = new Starry('#rating');
 				rating.init({
 					stars: 5,
-					multiple: false,
+					multiple: true,
 					startValue: 5,
 					readOnly: false,
 					tooltips: [
