--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				var starry_5;
 				starry_5 = new Starry('#starry_5');
 				starry_5.init({
-					stars: 8,
+					stars: 1,
 					multiple: true,
 					startValue: 2.7,
 					readOnly: false,
@@ -208,7 +208,7 @@
 							<td>stars</td>
 							<td>int</td>
 							<td>5</td>
-							<td>Number of rating stars. You can choose 3, 5, 6, 8 or 10.</td>
+							<td>Number of rating stars.</td>
 						</tr>
 						<tr>
 							<td>multiple</td>
