--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 							<td>stars</td>
 							<td>int</td>
 							<td>5</td>
-							<td>Number of rating stars.</td>
+							<td>Number of rating stars. (= y)</td>
 						</tr>
 						<tr>
 							<td>multiple</td>
@@ -220,7 +220,7 @@
 							<td>startValue</td>
 							<td>int</td>
 							<td>0</td>
-							<td>Preloaded rating.</td>
+							<td>Preloaded rating. <code>{x ∈ ℝ<sub>+</sub> | x <= y}</code></td>
 						</tr>
 						<tr>
 							<td>readOnly</td>
