--- a/index.html
+++ b/index.html
@@ -161,7 +161,28 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
-				<a href='https://github.com/Teddy95/Starry/archive/v1.4.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v1.4.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+				<a href='https://github.com/Teddy95/Starry/archive/v2.0.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v2.0.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+			</div>
+		</div>
+		<div style='width: 100%; padding: 40px;'>
+			<div style='width: 800px; margin: 0 auto !important;'>
+				<h1 id='Getting-Started' style="text-align: center; font-family: 'Patrick Hand', cursive;"><i class='fa fa-gamepad'></i> Playground</h1>
+
+				<hr />
+
+				<div style="text-align">
+					<div id='starry_playground' name='starry_playground'></div>
+					<br />
+					<button id="destroy" class="btn btn-warning">Destroy Starry</button> 
+					<button id="rebuild" class="btn btn-warning">Rebuild Starry</button> 
+					<button id="getRating" class="btn btn-warning">Get the active rating</button> 
+					<button id="setRating" class="btn btn-warning">Set the rating to 3.2819</button>
+				</div>
+			</div>
+		</div>
+		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
+			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
+				<a href='https://github.com/Teddy95/Starry/archive/v2.0.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v2.0.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
@@ -186,7 +207,7 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
-				<a href='https://github.com/Teddy95/Starry/archive/v1.4.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v1.4.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+				<a href='https://github.com/Teddy95/Starry/archive/v2.0.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v2.0.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
@@ -245,7 +266,7 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
-				<a href='https://github.com/Teddy95/Starry/archive/v1.4.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v1.4.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+				<a href='https://github.com/Teddy95/Starry/archive/v2.0.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v2.0.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
