--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 				<hr />
 
-				<div style="text-align">
+				<div style="text-align: center;">
 					<div id='starry_playground' name='starry_playground'></div>
 					<br />
 					<button id="destroy" class="btn btn-warning">Destroy Starry</button> 
