--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 				$('#rebuild').off();
 				$('#rebuild').click(function () {
-					starry_playground.rebuilt();
+					starry_playground.rebuild();
 				});
 
 				$('#getRating').off();
