--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
 				<hr />
 
 				<div style="text-align: center;">
-					<div id='starry_playground' name='starry_playground'></div>
+					<div id='starry_playground' name='starry_playground'>
+						<a href="javascript:starry_playground.rebuild();">Rebuild Starry!</a>
+					</div>
 					<br />
 					<br />
 					<button id="destroy" class="btn btn-warning">Destroy Starry</button> 
