--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 				<div style="text-align: center;">
 					<div id='starry_playground' name='starry_playground'>
-						<a href="javascript:starry_playground.rebuild();">Rebuild Starry!</a>
+						Rebuild Starry!
 					</div>
 					<br />
 					<br />
