--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<hr />
 
 				<p><b>Add starry.css and starry.js in your &lt;head&gt;</b> - Don't forget jQuery!</p>
-				<p><pre>&lt;link rel="stylesheet" type="text/css" href="starry/starry.css" /&gt;<br />&lt;script type="text/javascript" language="javascript" src="starry/starry.js"&gt;&lt;/script&gt;</pre></p>
+				<p><pre>&lt;link rel="stylesheet" type="text/css" href="starry/starry.min.css" /&gt;<br />&lt;script type="text/javascript" language="javascript" src="starry/starry.min.js"&gt;&lt;/script&gt;</pre></p>
 
 				<hr />
 
