--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' />
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' />
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Patrick+Hand' />
-		<link rel='stylesheet' type='text/css' href='starry.css' />
+		<link rel='stylesheet' type='text/css' href='starry.min.css' />
 
 		<link rel='shortcut icon' type='image/x-icon' href='icons/star_hover.png' />
 
 		<script type='text/javascript' language='javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 		<script type='text/javascript' language='javascript' src='http://onehackoranother.com/projects/jquery/tipsy/javascripts/jquery.tipsy.js'></script>
-		<script type='text/javascript' language='javascript' src='starry.js'></script>
+		<script type='text/javascript' language='javascript' src='starry.min.js'></script>
 		<script type='text/javascript' language='javascript'>
 			$(document).ready(function () {
 				var rating;
