--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name='description' content='JavaScript star rating system.' />
 
 		<link rel='stylesheet' type='text/css' href='http://onehackoranother.com/projects/jquery/tipsy/stylesheets/tipsy.css' />
-		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' />
+		<link rel='stylesheet' type='text/css' href='style.css' />
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' />
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Patrick+Hand' />
 		<link rel='stylesheet' type='text/css' href='starry.min.css' />
