--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name='description' content='JavaScript star rating system.' />
 
 		<link rel='stylesheet' type='text/css' href='http://onehackoranother.com/projects/jquery/tipsy/stylesheets/tipsy.css' />
-		<link rel='stylesheet' type='text/css' href='style.css' />
+		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' />
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' />
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Patrick+Hand' />
 		<link rel='stylesheet' type='text/css' href='starry.min.css' />
@@ -258,7 +258,7 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
-				<a href='https://github.com/Teddy95/Starry/archive/v2.1.0.zip' class='btn btn-primary'><h4><i class='fa fa-download'></i> Download v2.1.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-primary'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+				<a href='https://github.com/Teddy95/Starry/archive/v2.1.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v2.1.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
@@ -308,7 +308,7 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
-				<a href='https://github.com/Teddy95/Starry/archive/v2.1.0.zip' class='btn btn-primary'><h4><i class='fa fa-download'></i> Download v2.1.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-primary'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+				<a href='https://github.com/Teddy95/Starry/archive/v2.1.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v2.1.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
@@ -333,7 +333,7 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
-				<a href='https://github.com/Teddy95/Starry/archive/v2.1.0.zip' class='btn btn-primary'><h4><i class='fa fa-download'></i> Download v2.1.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-primary'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+				<a href='https://github.com/Teddy95/Starry/archive/v2.1.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v2.1.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
@@ -392,7 +392,7 @@
 		</div>
 		<div style='width: 100%; background-color: #ffc600; padding: 40px; color: #ffffff; text-shadow: 0px -1px 0px #f2a500;'>
 			<div style='width: 800px; margin: 0 auto !important; text-align: center;'>
-				<a href='https://github.com/Teddy95/Starry/archive/v2.1.0.zip' class='btn btn-primary'><h4><i class='fa fa-download'></i> Download v2.1.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-primary'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
+				<a href='https://github.com/Teddy95/Starry/archive/v2.1.0.zip' class='btn btn-warning'><h4><i class='fa fa-download'></i> Download v2.1.0</h4></a> <a href='https://github.com/Teddy95/Starry' class='btn btn-warning'><h4><i class='fa fa-github'></i> View source on Github</h4></a>
 			</div>
 		</div>
 		<div style='width: 100%; padding: 40px;'>
